# fr3_teleop

./: CMakeLists.txt  dashboard.py  delete_latest_bag  package.xml  record.sh
config/: ps4_input_manager.yaml
launch/: teleop.launch.py
src/: gripper_manager.cpp  ps4_input_manager.cpp  simple_ps4_teleop_server.cpp
